add excel workshop poster

--- a/index.html
+++ b/index.html
@@ -1,258 +1,316 @@
 <!doctype html>
 <html>
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>Orientation - Sunway Tech Club</title>
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<link rel="stylesheet" href="css/reveal.css">
-		<link rel="stylesheet" href="css/theme/white.css">
+	<title>Orientation - Sunway Tech Club</title>
 
-		<!-- Theme used for syntax highlighting of code -->
-		<link rel="stylesheet" href="lib/css/zenburn.css">
-		<link rel="stylesheet" href="lib/css/bootstrap.min.css">
+	<link rel="stylesheet" href="css/reveal.css">
+	<link rel="stylesheet" href="css/theme/white.css">
 
-		<!-- Printing and PDF exports -->
-		<script>
-			var link = document.createElement( 'link' );
-			link.rel = 'stylesheet';
-			link.type = 'text/css';
-			link.href = window.location.search.match( /print-pdf/gi ) ? 'css/print/pdf.css' : 'css/print/paper.css';
-			document.getElementsByTagName( 'head' )[0].appendChild( link );
-		</script>
+	<!-- Theme used for syntax highlighting of code -->
+	<link rel="stylesheet" href="lib/css/zenburn.css">
+	<link rel="stylesheet" href="lib/css/bootstrap.min.css">
 
-		<style>
-			/* Boostrap & Reveal.js fix */
-			[hidden] {display: inherit !important;}
-			/* Base */
-			.reveal{font-size: 36px;}
-			.reveal section img{border: none;box-shadow: none;}
-			header{position: fixed;top: 0;left: 0;width: 100%;max-height: 100px;}
+	<!-- Printing and PDF exports -->
+	<script>
+		var link = document.createElement('link');
+		link.rel = 'stylesheet';
+		link.type = 'text/css';
+		link.href = window.location.search.match(/print-pdf/gi) ? 'css/print/pdf.css' : 'css/print/paper.css';
+		document.getElementsByTagName('head')[0].appendChild(link);
+	</script>
 
-			/* Custom CSS */
-			.p-small{font-size: 1.6rem!important;}
-			#logo{max-width: 200px;margin: 30px;}
-			#hero-img{box-shadow: none;}
-			.logo{box-shadow: none;min-height: 80px;}
-			#events .figure-img{min-height: 245px;}
-			/* Hacked the positioning to align properly in slide, not tested in depth */
-			#recruit-poster{position: fixed;top: 0;left: 0;transform: translateX(50%);}
-		</style>
-	</head>
-	<body>
-		<header><img id="logo" src="images/stclogo.png" alt="STC logo"></header>
-		<div class="reveal" data-background-transition="slide">
-			<div class="slides">
-				<section>
-					<img id="hero-img" src="images/stclogo.png" alt="STC logo">
-					<p class="text-center text-muted p-small">Community &nbsp; Education &nbsp; Entreprenuership</p>
-				</section>
-				<section class="text-left">
-					<h1>Purpose</h1>
-					<p>There are gaps between tech education, tech entrepreneurship, and tech industry. We are here to fill these gaps.</p>
-				</section>
-				<!-- <section class="text-left">
+	<style>
+		/* Boostrap & Reveal.js fix */
+		[hidden] {
+			display: inherit !important;
+		}
+
+		/* Base */
+		.reveal {
+			font-size: 36px;
+		}
+
+		.reveal section img {
+			border: none;
+			box-shadow: none;
+		}
+
+		header {
+			position: fixed;
+			top: 0;
+			left: 0;
+			width: 100%;
+			max-height: 100px;
+		}
+
+		/* Custom CSS */
+		.p-small {
+			font-size: 1.6rem !important;
+		}
+
+		#logo {
+			max-width: 200px;
+			margin: 30px;
+		}
+
+		#hero-img {
+			box-shadow: none;
+		}
+
+		.logo {
+			box-shadow: none;
+			min-height: 80px;
+		}
+
+		#events .figure-img {
+			min-height: 245px;
+		}
+
+		/* Hacked the positioning to align properly in slide, not tested in depth */
+		#recruit-poster {
+			position: fixed;
+			top: 0;
+			left: 0;
+			transform: translateX(50%);
+		}
+	</style>
+</head>
+
+<body>
+	<header><img id="logo" src="images/stclogo.png" alt="STC logo"></header>
+	<div class="reveal" data-background-transition="slide">
+		<div class="slides">
+			<section>
+				<img id="hero-img" src="images/stclogo.png" alt="STC logo">
+				<p class="text-center text-muted p-small">Community &nbsp; Education &nbsp; Entreprenuership</p>
+			</section>
+			<section class="text-left">
+				<h1>Purpose</h1>
+				<p>There are gaps between tech education, tech entrepreneurship, and tech industry. We are here to fill
+					these gaps.</p>
+			</section>
+			<!-- <section class="text-left">
 					<h1>Vision</h1>
 					<p>Building a community of Sunway students with the aspiration of minimising the disparity between tech education, tech industry, and tech entrepreneurship.</p>
 				</section> -->
-				<section class="text-left">
-					<h1>Motivators</h1>
-					<p>"No place to apply what I've learned"</p>
-					<p>"There's no community"</p>
-					<p>"I have a cool idea but I don't know where to start"</p>
-				</section>
-				<section class="text-left">
-					<div class="container">
-						<div class="row">
-							<h3>You get:</h3>
+			<section class="text-left">
+				<h1>Motivators</h1>
+				<p>"No place to apply what I've learned"</p>
+				<p>"There's no community"</p>
+				<p>"I have a cool idea but I don't know where to start"</p>
+			</section>
+			<section class="text-left">
+				<div class="container">
+					<div class="row">
+						<h3>You get:</h3>
+					</div>
+					<div class="row text-center">
+						<div class="col fragment fade-left">
+							<img class="logo" src="images/logo_meeting.png" alt="two person shaking hands">
+							<h4>Community</h4>
+							<p class="p-small">We collaboratively learn and hack together.</p>
 						</div>
-						<div class="row text-center">
-							<div class="col fragment fade-left">
-								<img class="logo" src="images/logo_meeting.png" alt="two person shaking hands">
-								<h4>Community</h4>
-								<p class="p-small">We collaboratively learn and hack together.</p>
-							</div>
-							<div class="col fragment fade-left">
-								<img class="logo" src="images/logo_books.png" alt="book">
-								<h4>Education</h4>
-								<p class="p-small">We bridge the gap between tech education, entrepreneurship and industry.</p>
-							</div>
-							<div class="col fragment fade-left">
-								<img class="logo" src="images/logo_idea.png" alt="lighted lightbulb">
-								<h4>Entreprenuership</h4>
-								<p class="p-small">We build a technopreneurial culture in our community</p>
-							</div>
+						<div class="col fragment fade-left">
+							<img class="logo" src="images/logo_books.png" alt="book">
+							<h4>Education</h4>
+							<p class="p-small">We bridge the gap between tech education, entrepreneurship and industry.
+							</p>
+						</div>
+						<div class="col fragment fade-left">
+							<img class="logo" src="images/logo_idea.png" alt="lighted lightbulb">
+							<h4>Entreprenuership</h4>
+							<p class="p-small">We build a technopreneurial culture in our community</p>
 						</div>
 					</div>
-				</section>
-				<section class="text-left" id="events">
-					<section>
-						<h1>Past Events</h1>
-						<div class="row">
-							<div class="col">
-								<figure class="figure">
-									<img class="figure-img img-fluid" src="images/events/Io19.jpg" alt="">
-									<figcaption style="text-align: center;" class="figure-caption">Google I/O Extended 2019</figcaption>
-								</figure>
-							</div>
-							<div class="col">
-								<figure class="figure">
-									<img style="border-style: solid; border-width: 1px;" class="figure-img img-fluid" src="images/events/Java.png" alt="">
-									<figcaption class="figure-caption">Basic Java Workshop</figcaption>
-								</figure>
-							</div>
-							<div class="col">
-								<figure class="figure">
-									<img class="figure-img img-fluid" src="images/events/Weblaunch19.jpg" alt="">
-									<figcaption style="text-align: center;" class="figure-caption">WebLaunch 2019</figcaption>
-								</figure>
-							</div>
-						</div>
-					</section>
-					<section>
-						<h1>Past Events</h1>
-						<div class="row">
-							<div class="col">
-								<figure class="figure">
-									<img class="figure-img img-fluid" src="images/events/ioxkl.jpg" alt="">
-									<figcaption style="text-align: center;" class="figure-caption">Google I/O Extended 2018</figcaption>
-								</figure>
-							</div>
-							<div class="col">
-								<figure class="figure">
-									<img class="figure-img img-fluid" src="images/events/makerspace.jpg" alt="">
-									<figcaption style="text-align: center;" class="figure-caption">iLabs Makerspace Opening</figcaption>
-								</figure>
-							</div>
-							<div class="col">
-								<figure class="figure">
-									<img class="figure-img img-fluid" src="images/events/cityhack.jpg" alt="">
-									<figcaption style="text-align: center;" class="figure-caption">Cityhack 2017</figcaption>
-								</figure>
-							</div>
-						</div>
-					</section>
-					<section>
-						<h1>Past Events</h1>
-						<div class="row">
-							<div class="col">
-								<figure class="figure">
-									<img class="figure-img img-fluid" src="images/events/firebase.jpg" alt="">
-									<figcaption style="text-align: center;" class="figure-caption">GDG DevFest X Firebase Summit 2018</figcaption>
-								</figure>
-							</div>
-							<div class="col">
-								<figure class="figure">
-									<img style="border-style: solid; border-width: 1px;" class="figure-img img-fluid" src="images/events/pythonworkshop2.png" alt="">
-									<figcaption style="text-align: center;" class="figure-caption">Python Workshop</figcaption>
-								</figure>
-							</div>
-							<div class="col">
-								<figure class="figure">
-									<img class="figure-img img-fluid" src="images/events/weblaunch.jpg	" alt="">
-									<figcaption style="text-align: center;" class="figure-caption">WebLaunch 2018</figcaption>
-								</figure>
-							</div>
-						</div>
-					</section>
-					<section>
-						<h1>Past Events</h1>
-						<div class="row">
-							<div class="col">
-								<figure class="figure">
-									<img class="figure-img img-fluid" src="images/events/iosworkshop.jpg" alt="">
-									<figcaption style="text-align: center;" class="figure-caption">iOS Workshop</figcaption>
-								</figure>
-							</div>
-							<div class="col">
-								<figure class="figure">
-									<img style="border-style: solid; border-width: 1px;" class="figure-img img-fluid" src="images/events/android_logo_PNG35.jpg" alt="">
-									<figcaption style="text-align: center;" class="figure-caption">Android Workshop</figcaption>
-								</figure>
-							</div>
-							<div class="col">
-								<figure class="figure">
-									<img class="figure-img img-fluid" src="images/events/react.jpg" alt="">
-									<figcaption style="text-align: center;" class="figure-caption">React Native Workshop</figcaption>
-								</figure>
-							</div>
-						</div>
-					</section>
-				</section>
-				<section class="text-left">
-					<h1>Future Events</h1>
-					<ul>
-						<li>17 & 19 SEP - Excel Workshop</li>
-						<li>TBA - Eduhack 2019</li>
-						<li>TBA - Hacktoberfest</li>
-						<li>...and more!</li>
-					</ul>
-				</section>
-				<!-- <section>
-					<h3>WebLaunch 3.0</h3>
-					<div class="container">
-						<div class="row justify-content-center">
-							<div class="col-4">
-								<img class="img-fluid" src="images/events/weblaunch.png" alt="weblaunch registration">
-							</div>
-
-						</div>
-					</div>
-				</section> --> 
+				</div>
+			</section>
+			<section class="text-left" id="events">
 				<section>
-					<div class="container">
-						<div class="row justify-content-center">
-							<div class="col-4">
-								<img id="recruit-poster" class="img-fluid" src="images/stc-recruitment.jpg" alt="recruitment poster">
-							</div>
+					<h1>Past Events</h1>
+					<div class="row">
+						<div class="col">
+							<figure class="figure">
+								<img class="figure-img img-fluid" src="images/events/Io19.jpg" alt="">
+								<figcaption style="text-align: center;" class="figure-caption">Google I/O Extended 2019
+								</figcaption>
+							</figure>
+						</div>
+						<div class="col">
+							<figure class="figure">
+								<img style="border-style: solid; border-width: 1px;" class="figure-img img-fluid"
+									src="images/events/Java.png" alt="">
+								<figcaption class="figure-caption">Basic Java Workshop</figcaption>
+							</figure>
+						</div>
+						<div class="col">
+							<figure class="figure">
+								<img class="figure-img img-fluid" src="images/events/Weblaunch19.jpg" alt="">
+								<figcaption style="text-align: center;" class="figure-caption">WebLaunch 2019
+								</figcaption>
+							</figure>
 						</div>
 					</div>
 				</section>
-				<section class="text-left">
-					<h1>Membership Details</h1>
-					<ul>
-						<li>Membership Fee: RM10/year</li>
-						<li>Benefits: Registration priority & member price</li>
-						<li>How: Approach committee during any of our events</li>
-					</ul>
+				<section>
+					<h1>Past Events</h1>
+					<div class="row">
+						<div class="col">
+							<figure class="figure">
+								<img class="figure-img img-fluid" src="images/events/ioxkl.jpg" alt="">
+								<figcaption style="text-align: center;" class="figure-caption">Google I/O Extended 2018
+								</figcaption>
+							</figure>
+						</div>
+						<div class="col">
+							<figure class="figure">
+								<img class="figure-img img-fluid" src="images/events/makerspace.jpg" alt="">
+								<figcaption style="text-align: center;" class="figure-caption">iLabs Makerspace Opening
+								</figcaption>
+							</figure>
+						</div>
+						<div class="col">
+							<figure class="figure">
+								<img class="figure-img img-fluid" src="images/events/cityhack.jpg" alt="">
+								<figcaption style="text-align: center;" class="figure-caption">Cityhack 2017
+								</figcaption>
+							</figure>
+						</div>
+					</div>
 				</section>
-				<section class="text-left">
-					<h1 class="fragment grow">Join us!</h1>
-					<ul class="fragment">
-						<li>sunwaytechclub.slack.com</li>
-						<li>sunwaytechclub.org/telegram</li>
-						<li>fb.com/sunwaytechclub</li>
-						<li>sunwaytechclub@gmail.com</li>
-					</ul>
+				<section>
+					<h1>Past Events</h1>
+					<div class="row">
+						<div class="col">
+							<figure class="figure">
+								<img class="figure-img img-fluid" src="images/events/firebase.jpg" alt="">
+								<figcaption style="text-align: center;" class="figure-caption">GDG DevFest X Firebase
+									Summit 2018</figcaption>
+							</figure>
+						</div>
+						<div class="col">
+							<figure class="figure">
+								<img style="border-style: solid; border-width: 1px;" class="figure-img img-fluid"
+									src="images/events/pythonworkshop2.png" alt="">
+								<figcaption style="text-align: center;" class="figure-caption">Python Workshop
+								</figcaption>
+							</figure>
+						</div>
+						<div class="col">
+							<figure class="figure">
+								<img class="figure-img img-fluid" src="images/events/weblaunch.jpg	" alt="">
+								<figcaption style="text-align: center;" class="figure-caption">WebLaunch 2018
+								</figcaption>
+							</figure>
+						</div>
+					</div>
 				</section>
-			</div>
+				<section>
+					<h1>Past Events</h1>
+					<div class="row">
+						<div class="col">
+							<figure class="figure">
+								<img class="figure-img img-fluid" src="images/events/iosworkshop.jpg" alt="">
+								<figcaption style="text-align: center;" class="figure-caption">iOS Workshop</figcaption>
+							</figure>
+						</div>
+						<div class="col">
+							<figure class="figure">
+								<img style="border-style: solid; border-width: 1px;" class="figure-img img-fluid"
+									src="images/events/android_logo_PNG35.jpg" alt="">
+								<figcaption style="text-align: center;" class="figure-caption">Android Workshop
+								</figcaption>
+							</figure>
+						</div>
+						<div class="col">
+							<figure class="figure">
+								<img class="figure-img img-fluid" src="images/events/react.jpg" alt="">
+								<figcaption style="text-align: center;" class="figure-caption">React Native Workshop
+								</figcaption>
+							</figure>
+						</div>
+					</div>
+				</section>
+			</section>
+			<section class="text-left">
+				<h1>Future Events</h1>
+				<ul>
+					<li>17 & 19 SEP - Excel Workshop</li>
+					<li>TBA - Eduhack 2019</li>
+					<li>TBA - Hacktoberfest</li>
+
+					<li>...and more!</li>
+				</ul>
+			</section>
+			<section>
+				<h3>Excel Workshop</h3>
+				<div class="container">
+					<div class="row justify-content-center">
+						<div class="col-4">
+							<img class="img-fluid" src="images/events/excel.png" alt="excel workshop">
+						</div>
+
+					</div>
+				</div>
+			</section>
+			<section>
+				<div class="container">
+					<div class="row justify-content-center">
+						<div class="col-4">
+							<img id="recruit-poster" class="img-fluid" src="images/stc-recruitment.jpg"
+								alt="recruitment poster">
+						</div>
+					</div>
+				</div>
+			</section>
+			<section class="text-left">
+				<h1>Membership Details</h1>
+				<ul>
+					<li>Membership Fee: RM10/year</li>
+					<li>Benefits: Registration priority & member price</li>
+					<li>How: Approach committee during any of our events</li>
+				</ul>
+			</section>
+			<section class="text-left">
+				<h1 class="fragment grow">Join us!</h1>
+				<ul class="fragment">
+					<li>sunwaytechclub.slack.com</li>
+					<li>sunwaytechclub.org/telegram</li>
+					<li>fb.com/sunwaytechclub</li>
+					<li>sunwaytechclub@gmail.com</li>
+				</ul>
+			</section>
 		</div>
+	</div>
 
-		<script src="lib/js/head.min.js"></script>
-		<script src="js/reveal.js"></script>
-		<script src="lib/js/jquery-3.3.1.slim.min.js"></script>
-		<script src="lib/js/bootstrap.min.js"></script>
+	<script src="lib/js/head.min.js"></script>
+	<script src="js/reveal.js"></script>
+	<script src="lib/js/jquery-3.3.1.slim.min.js"></script>
+	<script src="lib/js/bootstrap.min.js"></script>
 
-		<script>
-			// More info about config & dependencies:
-			// - https://github.com/hakimel/reveal.js#configuration
-			// - https://github.com/hakimel/reveal.js#dependencies
-			Reveal.initialize({
-				transition: 'slide',
-				loop: true,
-				autoSlide: 8000,
-				dependencies: [
-					{ src: 'plugin/markdown/marked.js' },
-					{ src: 'plugin/markdown/markdown.js' },
-					{ src: 'plugin/notes/notes.js', async: true },
-					{ src: 'plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } }
-				]
-			});
+	<script>
+		// More info about config & dependencies:
+		// - https://github.com/hakimel/reveal.js#configuration
+		// - https://github.com/hakimel/reveal.js#dependencies
+		Reveal.initialize({
+			transition: 'slide',
+			loop: true,
+			autoSlide: 8000,
+			dependencies: [
+				{ src: 'plugin/markdown/marked.js' },
+				{ src: 'plugin/markdown/markdown.js' },
+				{ src: 'plugin/notes/notes.js', async: true },
+				{ src: 'plugin/highlight/highlight.js', async: true, callback: function () { hljs.initHighlightingOnLoad(); } }
+			]
+		});
 			// not working for some reason
 			// Reveal.configure({
 			// 	backgroundTransition: 'slide'
 			// });
-		</script>
-	</body>
+	</script>
+</body>
+
 </html>
