--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
 				<div class="container">
 					<div class="row justify-content-center">
 						<div class="col-4">
-							<img class="img-fluid" src="images/events/excel.png" alt="excel workshop">
+							<img class="img-fluid" src="images/events/excel.jpg" alt="excel workshop">
 						</div>
 
 					</div>
